@@ -1,3 +1,10 @@
+2006-04-06  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ReflectionReader.cs
+	  Mono.Cecil/ReflectionWriter.cs
+	  Mono.Cecil/AggressiveReflectionReader.cs:
+		Handle custom attributes on generic parameters.
+
 2006-04-05  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionWriter.cs:
